# poststation-util

./: LICENSE-MIT  README.md  ci.sh
.github/workflows/: ci.yml
book/: book.toml
book/src/: SUMMARY.md  configuration.md  family.md  installation-poststation.md  installation-utils.md  installation.md  intro.md  poststation-command-line.md
book/src/tutorial/: 000-overview.md  100-simulator.md  101-start.md  102-tui.md  103-cli.md  104-sdk.md  200-rp2040.md
crates/poststation-api-icd/: Cargo.toml
crates/poststation-api-icd/src/: lib.rs  postsock.rs  rest.rs
crates/poststation-fw-icd/: Cargo.toml
crates/poststation-fw-icd/src/: lib.rs
crates/poststation-sim-icd/: Cargo.toml
crates/poststation-sim-icd/src/: lib.rs
examples/: README.md
examples/i2c-passthru/demo/: Cargo.toml
examples/i2c-passthru/demo/src/: main.rs
examples/i2c-passthru/icd/: Cargo.toml
examples/i2c-passthru/icd/src/: lib.rs
examples/i2c-passthru/rp2040/: Cargo.toml
examples/i2c-passthru/rp2040/src/: app.rs  handlers.rs  main.rs
examples/i2c-passthru/rp2350/: Cargo.toml
examples/i2c-passthru/rp2350/.cargo/: config.toml
examples/i2c-passthru/rp2350/src/: app.rs  handlers.rs  main.rs
examples/waveshare-rp2040-keyboard-3/demo/: Cargo.toml
examples/waveshare-rp2040-keyboard-3/demo/src/: main.rs
examples/waveshare-rp2040-keyboard-3/icd/: Cargo.toml
examples/waveshare-rp2040-keyboard-3/icd/src/: lib.rs
examples/waveshare-rp2040-keyboard-3/rp2040/: Cargo.toml
examples/waveshare-rp2040-keyboard-3/rp2040/scripts/: all_black.sh  all_white.sh  cli_switches.sh  picoboot.sh  rgb.sh  ws_switches.sh
examples/waveshare-rp2040-keyboard-3/rp2040/src/: app.rs  handlers.rs  main.rs  ws2812.rs
templates/icd/: Cargo.toml
templates/icd/src/: lib.rs
templates/nrf52840/: Cargo.toml
templates/nrf52840/.cargo/: config.toml
templates/nrf52840/src/: app.rs
templates/rp2040/: Cargo.toml
templates/rp2040/src/: app.rs  handlers.rs  main.rs
templates/rp2350/: Cargo.toml
templates/rp2350/.cargo/: config.toml
templates/rp2350/src/: main.rs
tools/: Cargo.toml
tools/poststation-cli/: Cargo.toml
tools/poststation-cli/src/: main.rs
tools/poststation-cli/src/device/: mod.rs
tools/poststation-sdk/: Cargo.toml
tools/poststation-sdk/src/: lib.rs
