[workspace]
members = [
    "poststation-cli",
    "poststation-sdk",
]
resolver = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false
