[package]
name = "poststation-api-icd"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/OneVariable/poststation-util"
authors = ["James Munns <james@onevariable.com>"]
description = "API types for poststation"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
postcard-schema = { version = "0.2.0", features = ["chrono-v0_4", "postcard-derive", "use-std", "uuid-v1_0"] }
serde = "1.0"

[dependencies.serde_json]
version = "1.0.133"
optional = true

[dependencies.postcard-rpc]
version = "0.11.0"
features = [
    "use-std",
]

[dependencies.uuid]
version = "1.10.0"
features = ["v7", "serde"]

[dependencies.schemars]
version = "0.8.21"
optional = true
features = ["uuid1"]

[features]
default = ["rest-api"]
rest-api = ["schemars-v0_8", "serde_json"]
schemars-v0_8 = ["dep:schemars"]
