[package]
name = "poststation-fw-icd"
version = "0.4.0"
edition = "2021"
authors = ["James Munns <james@onevariable.com>"]
description = "The firmware interface definition for Poststation"
repository = "https://github.com/OneVariable/poststation-util"
license = "MIT OR Apache-2.0"

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false

[dependencies.postcard-rpc]
version = "0.11"

[dependencies.postcard-schema]
version = "0.2"
features = ["derive", "heapless-v0_8"]

[dependencies.heapless]
version = "0.8"
default-features = false
features = ["serde"]

[features]
use-std = ["serde/std", "postcard-schema/use-std"]
