[package]
name = "poststation-cli"
version = "0.3.0"
edition = "2021"
authors = ["James Munns <james@onevariable.com>"]
description = "A CLI tool for poststation"
repository = "https://github.com/OneVariable/poststation-util"
license = "MIT OR Apache-2.0"

[package.metadata.wix]
upgrade-guid = "671C6ED7-3503-443D-BD54-9279A13E9594"
path-guid = "1BACD011-57BA-4178-A899-0B74DB3823F4"
license = false
eula = false

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
serde_json = "1.0.128"

[dependencies.postcard-rpc]
version = "0.11.0"
features = ["use-std"]

[dependencies.poststation-api-icd]
path = "../../crates/poststation-api-icd"
version = "0.3.0"

[dependencies.poststation-sdk]
path = "../poststation-sdk"
version = "0.3.0"


[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
]

[dependencies.postcard]
version = "1.1.0"
features = ["experimental-derive", "use-std"]

[dependencies.uuid]
version = "1.10.0"
features = ["v7", "serde"]
