[package]
name = "poststation-cli"
# This version of the CLI tested with poststation v0.14.0
version = "0.4.2"
edition = "2021"
authors = ["James Munns <james@onevariable.com>"]
description = "A CLI tool for poststation"
repository = "https://github.com/OneVariable/poststation-util"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow      = "1.0.89"
clap        = { version = "4.5.19", features = ["derive"] }
directories = "5.0.1"
rand = "0.8.5"
serde_json  = "1.0.128"

[dependencies.postcard-rpc]
version = "0.11.0"
features = ["use-std"]

[dependencies.poststation-api-icd]
path = "../../crates/poststation-api-icd"
version = "0.4.0"

[dependencies.poststation-sdk]
path = "../poststation-sdk"
version = "0.4.0"

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
]

[dependencies.postcard]
version = "1.1.0"
features = ["experimental-derive", "use-std"]

[dependencies.uuid]
version = "1.10.0"
features = ["v7", "serde"]
