[package]
name = "poststation-sdk"
version = "0.3.1"
edition = "2021"
authors = ["James Munns <james@onevariable.com>"]
description = "An API SDK for poststation"
repository = "https://github.com/OneVariable/poststation-util"
license = "MIT OR Apache-2.0"

[dependencies]
cobs = "0.2.3"
directories = "5.0.1"
postcard = { version = "1.1", features = ["use-std"] }
postcard-dyn = { version = "0.2" }
postcard-schema = { version = "0.2", features = ["uuid-v1_0"]}
rustls          = { version = "0.23.20", default-features = false, features = ["std", "ring"] }
serde = "1.0"
serde_json = "1.0.128"
tokio-rustls    = { version = "0.26.1", default-features = false, features = ["logging", "tls12", "ring"] }
tracing = "0.1.40"

[dependencies.poststation-api-icd]
path = "../../crates/poststation-api-icd"
version = "0.3"

[dependencies.postcard-rpc]
version = "0.11.0"
features = [
    "use-std",
    "raw-nusb",
]

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
]
