[package]
name = "poststation-sdk"
# This version of the SDK tested with poststation v0.14.0
version = "0.4.0"
edition = "2021"
authors = ["James Munns <james@onevariable.com>"]
description = "An API SDK for poststation"
repository = "https://github.com/OneVariable/poststation-util"
license = "MIT OR Apache-2.0"

[dependencies]
cobs            = "0.2.3"
directories     = "5.0.1"
postcard        = { version = "1.1", features = ["use-std"] }
postcard-dyn    = { version = "0.2" }
postcard-schema = { version = "0.2", features = ["uuid-v1_0"]}
rustls          = { version = "0.23.20", default-features = false, features = ["std", "ring"] }
serde           = "1.0"
tokio-rustls    = { version = "0.26.1", default-features = false, features = ["logging", "tls12", "ring"] }
tracing         = "0.1.40"

[dependencies.poststation-api-icd]
path = "../../crates/poststation-api-icd"
version = "0.4.0"

[dependencies.postcard-rpc]
version = "0.11.0"
features = [
    "use-std",
]

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
]
